--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -441,14 +441,13 @@ a {
 p {
     line-height: 1.6;
 }
-  /* Estilos para centrar la imagen */
-  .image-container {
+
+img {
       text-align: center;
-  }
-  
-  .image-container img {
       display: block;
-      margin: 0 auto;
+      margin: 3rem auto;
+      width: 45%;
+      height: auto;
   }
 
 
