--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -38,7 +38,8 @@
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  text-overflow: ellipsis; }
 .column,
 .columns {
   width: 100%;
@@ -48,14 +49,14 @@
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
-    width: 85%;
+    width: auto;
     padding: 0; }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
-    width: 80%; }
+    width: 85%; }
   .column,
   .columns {
     margin-left: 4%; }
@@ -397,7 +398,7 @@ header {
   margin: 0px;
   padding: 100px 0;
   color: #fff;
-  text-shadow: 0px 0px 0.5em #000000bd;
+  text-shadow: 0px 0px 0.7em #000000bd;
   text-align: center;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
@@ -475,7 +476,12 @@ there.
 
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: 400px) {
+    header h1 {
+  margin-right: 3.2rem;
+  margin-left: 3.2rem
+  }
+}
 
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {}
