--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -146,7 +146,13 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
   font-family: "Poppins", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 h1 { font-weight: 700; font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
+h2 {
+  border-bottom: 1px solid #ccc;
+  padding: 20px 0;
+  font-size: 3.6rem;
+  line-height: 1.25;
+  letter-spacing: -.1rem;
+}
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
@@ -164,17 +170,31 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 p {
   margin-top: 0;
+  line-height: 1.6;
   font-family: "DM Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #abbaff
+  text-decoration: none;
+  color: #007BFF;
+  transition: 0.5s;
+}
 
-; }
 a:hover {
-  color: #0FA0CE; }
+  font-weight: 700;
+  opacity: 0.7;
+  transition: 0.2s;
+}
+
+li a {
+  max-width: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  border: 1px solid #ccc;
+}
 
 
 /* Buttons
@@ -319,7 +339,7 @@ ol ul {
   margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%; }
 li {
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem }
 
 
 /* Code
@@ -398,31 +418,28 @@ header {
   margin: 0px;
   padding: 100px 0;
   color: #fff;
-  text-shadow: 0px 0px 0.7em #000000bd;
+  text-shadow: 0px 0px 0.7em #000000;
   text-align: center;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
 }
 
-header h1 {
+header h1, header p {
   margin-right: 5.2rem;
   margin-left: 5.2rem
 }
 
 header p {
+  font-weight: 700;
   margin-top: 10vw;
 }
 
-.container {
+.article {
   max-width: 800px;
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 2px 4px #00000035;
   border-radius: 30px;
-}
-  h2 {
-    border-bottom: 1px solid #ccc;
-    padding: 20px 0;
 }
 
 .indice {
@@ -430,28 +447,18 @@ header p {
     padding: 0;
 }
 
-li {
-    margin-bottom: 10px;
-}
-
-a {
-    text-decoration: none;
-    color: #007BFF;
-}
-
-p {
-    line-height: 1.6;
-}
-
 img {
-      display: block;
-      width: 45%;
-      height: auto;
-      text-align: center;
-      margin: 3rem auto;
-      border-radius: 8px;
-  }
+  display: block;
+  width: 45%;
+  height: auto;
+  text-align: center;
+  margin: 3rem auto;
+  border-radius: 8px;
+}
 
+.acc-tools {
+  display: none;
+}
 
 /* Clearing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -477,7 +484,7 @@ there.
 
 /* Larger than mobile */
 @media (min-width: 400px) {
-    header h1 {
+    header h1, header p {
   margin-right: 3.2rem;
   margin-left: 3.2rem
   }
