--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -176,6 +176,7 @@ p {
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 a {
   text-decoration: none;
   color: #007BFF;
@@ -183,9 +184,14 @@ a {
 }
 
 a:hover {
-  font-weight: 700;
+  font-size: 120%;
   opacity: 0.7;
   transition: 0.2s;
+  padding: 5px;
+}
+.resource {
+  font-size: unset !important; 
+  padding: unset !important;
 }
 
 .reference {
