--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -1,6 +1,7 @@
 @import url(normalize.css);
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,600;1,9..40,300;1,9..40,400;1,9..40,600&family=Poppins:ital,wght@0,500;0,700;0,900;1,500;1,700;1,900&display=swap');
 @import url('https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
 /*
 * Skeleton V2.0.4
@@ -463,11 +464,11 @@ img {
 }
 
 .index {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
-.distintivo {
+.badge {
   background-color: #000;
   color: #fff;
   padding: 5px 10px;
@@ -475,9 +476,26 @@ img {
   font-weight: bold;
 }
 
+.accessibility-bar {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 60%;
+  background-color: #ffffff80;
+  -webkit-backdrop-filter: blur(1em);
+  backdrop-filter: blur(1em);
+  box-shadow: 0 0 8px #00000080;
+  display: none; /* !flex */
+  justify-content: space-between;
+  padding: 5px;
+  border-top-left-radius: 30px;
+}
 
-.acc-tools {
-  display: none;
+.accessibility-bar button {
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  margin: 0;
 }
 
 
