--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -424,17 +424,38 @@ form {
 /* Misc
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+header h1, header h6 {
+  z-index: 2;
+  position: relative !important;
+}
+
 header {
   user-select: none;
   background: conic-gradient(from 30deg, #FF0000 0%, #FFFF00 33.3%, #00FF00 33.4%, #00FFFF 66.6%, #0000FF 66.7%, #FF00FF 100%, #FF0000 100%);
   margin: 0px;
   padding: 100px 0;
   color: #fff;
-  text-shadow: 0px 0px 0.7em #000000;
+  text-shadow: 0px 0px 0.7em rgba(0, 0, 0, 0.7);
   text-align: center;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
+  position: relative;
+  z-index: 0;
 }
+
+header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.2); /* Fondo semi-transparente negro */
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  z-index: 1;
+}
+
 
 header h1, header p {
   margin-right: 5.2rem;
@@ -448,7 +469,7 @@ header p {
 
 img {
   display: block;
-  width: 45%;
+  width: 50%;
   height: auto;
   text-align: center;
   margin: 3rem auto;
@@ -468,12 +489,35 @@ img {
   padding: 0;
 }
 
-.badge {
+ol.badge-bullets {
+  list-style: none;
+}
+
+ol.badge-bullets>li {
+  vertical-align: middle;
+  margin-bottom: 10px;
+}
+
+ol.badge-bullets>li:first-child {
+  counter-reset: index;
+}
+
+ol.badge-bullets>li:before {
+  content: counter(index);
+  counter-increment: index;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
   background-color: #000;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 5px;
+  text-align: center;
   color: #fff;
-  padding: 5px 10px;
-  border-radius: 5px;
   font-weight: bold;
+  font-family: 'Poppins';
+  font-size: 23px;
+  line-height: 30px;
 }
 
 .accessibility-bar {
@@ -524,9 +568,9 @@ there.
 
 /* Larger than mobile */
 @media (min-width: 400px) {
-    header h1, header p {
-  margin-right: 3.2rem;
-  margin-left: 3.2rem
+    header h1, header h6 {
+  margin-right: 3.5rem;
+  margin-left: 3.5rem
   }
 }
 
