--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -433,7 +433,7 @@ header {
   user-select: none;
   background: conic-gradient(from 30deg, #FF0000 0%, #FFFF00 33.3%, #00FF00 33.4%, #00FFFF 66.6%, #0000FF 66.7%, #FF00FF 100%, #FF0000 100%);
   margin: 0px;
-  padding: 100px 0;
+  padding: 200px 270px;
   color: #fff;
   text-shadow: 0px 0px 0.7em rgba(0, 0, 0, 0.7);
   text-align: center;
@@ -450,7 +450,7 @@ header::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.2); /* Fondo semi-transparente negro */
+  background: rgba(0, 0, 0, 0.07); /* Fondo semi-transparente negro */
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   z-index: 1;
