--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -128,7 +128,8 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  scroll-behavior: smooth; }
 body {
   overflow-x: hidden;
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
@@ -434,7 +435,6 @@ header {
   user-select: none;
   background: conic-gradient(from 30deg, #FF0000 0%, #FFFF00 33.3%, #00FF00 33.4%, #00FFFF 66.6%, #0000FF 66.7%, #FF00FF 100%, #FF0000 100%);
   margin: 0px;
-  padding: 150px 270px;
   color: #fff;
   text-shadow: 0px 0px 0.7em rgba(0, 0, 0, 0.7);
   text-align: center;
@@ -455,12 +455,6 @@ header::before {
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   z-index: 1;
-}
-
-
-header h1, header h6 {
-  margin-right: 5.2rem;
-  margin-left: 5.2rem
 }
 
 header h6 {
@@ -567,18 +561,17 @@ there.
 
 
 /* Larger than mobile */
-@media (min-width: 400px) {
-    header h1, header h6 {
-  margin-right: 3.5rem;
-  margin-left: 3.5rem
-  }
-}
+@media (min-width: 400px) {}
 
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+  header {
+    padding: 150px 260px;
+  }
+}
 
 /* Larger than desktop */
 @media (min-width: 1000px) {}
